# DataStructureHW2

./: AvlTree.h  CMakeLists.txt  DoubleHashTable.h  DynamicArray.h  Huntech26a2.cpp  Huntech26a2.h  Hunter.cpp  Hunter.h  Squad.cpp  Squad.h  Union.h  run_tests.py
tests/: test0.res  test1.out  test1.res  test2.res  test3.res  test4.res
