cmake_minimum_required(VERSION 3.29)
project(DataStructureHW2)

set(CMAKE_CXX_STANDARD 20)

add_executable(DataStructureHW2
        Huntech26a2.cpp
        AvlTree.h
        Union.h
        DynamicArray.h
        Hunter.cpp
        Hunter.h
        DoubleHashTable.h
        main26a2.cpp
        Squad.cpp
        Squad.h)
